--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div class="header">
     <h1>Phosfor Font Explorer</h1>
-    <select id="fontSelect">
-      <option value="https://gigidesigns-netizen.github.io/phosfor-font-explorer/fonts/Phosfor-Aether5Pixel.otf">Aether 5 Pixel</option>
-      <option value="https://gigidesigns-netizen.github.io/phosfor-font-explorer/fonts/Phosfor-Aether6Medium.otf">Aether 6 Medium</option>
-      <option value="https://gigidesigns-netizen.github.io/phosfor-font-explorer/fonts/Phosfor-Aether7Bold.otf">Aether 7 Bold</option>
-    </select>
+    <select id="fontSelector">
+  <option value="Aether 5 Pixel">Aether 5 Pixel</option>
+  <option value="Aether 6 Medium">Aether 6 Medium</option>
+  <option value="Aether 7 Bold">Aether 7 Bold</option>
+</select>
     <label for="sizeRange">Size:</label>
     <input type="range" id="sizeRange" min="20" max="200" value="72" />
   </div>
